UI refinement: dashboard glass tiles, placement intervention improvements, login redesign

--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -21,53 +21,46 @@
     <p class="dash-sub">Your French journey at a glance</p>
   </header>
 
-  <!-- MAIN -->
-  <main>
+  <!-- WHITE CARD -->
+  <div class="dashboard-card">
 
-    <div class="circle-container">
+    <!-- ICON GRID -->
+    <div class="icon-grid">
 
-      <div class="glass-circle"></div>
-
-      <!-- LEVELS -->
-      <button class="icon-btn levels pos-top" onclick="goLevels()">
+      <button class="icon-btn" onclick="goLevels()">
         <img src="../assets/icons-3d/levels.png" alt="Levels">
       </button>
 
-      <!-- GAMES -->
-      <button class="icon-btn games pos-right" onclick="goTalkletics()">
+      <button class="icon-btn" onclick="goTalkletics()">
         <img src="../assets/icons-3d/games.png" alt="Games">
       </button>
 
-      <!-- MUSIC -->
-      <button class="icon-btn music pos-br" onclick="goMusic()">
+      <button class="icon-btn" onclick="goMusic()">
         <img src="../assets/icons-3d/music.png" alt="Music">
       </button>
 
-      <!-- DELF -->
-      <button class="icon-btn delf pos-bottom" onclick="goDelf()">
+      <button class="icon-btn" onclick="goDelf()">
         <img src="../assets/icons-3d/delf.png" alt="DELF">
       </button>
 
-      <!-- TRANSLATION -->
-      <button class="icon-btn translation pos-left" onclick="goTranslation()">
+      <button class="icon-btn" onclick="goTranslation()">
         <img src="../assets/icons-3d/translation.png" alt="Translation">
       </button>
 
-      <!-- CHAT -->
-      <button class="icon-btn chat pos-tr" onclick="goChat()">
+      <button class="icon-btn" onclick="goChat()">
         <img src="../assets/icons-3d/chat.png" alt="Chat">
       </button>
 
     </div>
 
-    <!-- BOTTOM BUTTONS -->
-    <div class="bottom-buttons">
-      <button onclick="goFeedback()">Feedback</button>
-      <button onclick="goSupport()">Support 💚 SayBon</button>
-      <button onclick="goHome()">Back to Home</button>
-    </div>
+  </div>
 
-  </main>
+  <!-- BOTTOM BUTTONS -->
+  <div class="bottom-buttons">
+    <button onclick="goFeedback()">Feedback</button>
+    <button onclick="goSupport()">Support 💚 SayBon</button>
+    <button onclick="goHome()">Back to Home</button>
+  </div>
 
 </div>
 
