--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -1,119 +1,233 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LEARNER DASHBOARD — SayBon</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>LEARNER DASHBOARD — SayBon</title>
 
-  <!-- Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
 
-  <!-- Global + Dashboard CSS -->
-  <link rel="stylesheet" href="../css/global.css?v=5" />
-  <link rel="stylesheet" href="../css/dashboard.css?v=5" />
+<style>
+
+/* ================= BASE ================= */
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Inter", sans-serif;
+  background: radial-gradient(circle at top, #0f172a 0%, #020617 80%);
+  color: white;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.dashboard {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+
+/* ================= HEADER ================= */
+
+.dashboard-header {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.dashboard-header h1 {
+  font-size: 24px;
+  font-weight: 800;
+  letter-spacing: 1px;
+}
+
+.dashboard-header p {
+  font-size: 13px;
+  opacity: 0.7;
+  margin-top: 4px;
+}
+
+/* ================= GRID ================= */
+
+.dashboard-grid {
+  flex: 1;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 14px;
+}
+
+/* Desktop */
+@media (min-width: 900px) {
+  .dashboard-grid {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+}
+
+/* ================= CARD BASE ================= */
+
+.card {
+  border-radius: 22px;
+  padding: 18px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  backdrop-filter: blur(18px);
+  transition: 0.25s ease;
+  cursor: pointer;
+  box-shadow:
+    inset 0 1px 2px rgba(255,255,255,0.3),
+    0 10px 25px rgba(0,0,0,0.4);
+}
+
+.card:hover {
+  transform: translateY(-3px);
+}
+
+.card .emoji {
+  font-size: 24px;
+  margin-bottom: 8px;
+}
+
+.card h3 {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.card span {
+  font-size: 12px;
+  opacity: 0.8;
+  margin-top: 4px;
+}
+
+/* ================= CARD COLORS (GRADIENT GLASS) ================= */
+
+.levels {
+  background: linear-gradient(135deg, #ff6fa9, #d81b60);
+}
+
+.talkletics {
+  background: linear-gradient(135deg, #f7d046, #c9a000);
+}
+
+.music {
+  background: linear-gradient(135deg, #ffb347, #ff7f11);
+}
+
+.delf {
+  background: linear-gradient(135deg, #7ed6df, #22a6b3);
+}
+
+.translation {
+  background: linear-gradient(135deg, #6ab04c, #2ecc71);
+}
+
+.chat {
+  background: linear-gradient(135deg, #74b9ff, #0984e3);
+}
+
+/* ================= FOOTER ================= */
+
+.dashboard-footer {
+  display: flex;
+  gap: 10px;
+  margin-top: 15px;
+}
+
+.dashboard-footer button {
+  flex: 1;
+  padding: 10px;
+  border-radius: 16px;
+  border: none;
+  font-family: "Playfair Display", serif; /* different font */
+  font-size: 13px;
+  font-weight: 600;
+  color: white;
+  background: linear-gradient(135deg, #8e44ad, #6c5ce7);
+  cursor: pointer;
+  transition: 0.2s ease;
+  box-shadow: 0 6px 20px rgba(0,0,0,0.4);
+}
+
+.dashboard-footer button:hover {
+  transform: translateY(-2px);
+}
+
+</style>
 </head>
 
 <body>
 
-  <div class="dashboard">
+<div class="dashboard">
 
-    <!-- ================= HEADER ================= -->
-    <header class="dashboard-header">
-      <h1>LEARNER DASHBOARD</h1>
-      <p>Your French journey at a glance</p>
-    </header>
+<header class="dashboard-header">
+  <h1>LEARNER 📌 DASHBOARD</h1>
+  <p>Your French journey at a glance</p>
+</header>
 
+<main class="dashboard-grid">
 
-    <!-- ================= MAIN GRID ================= -->
-    <main class="dashboard-grid">
-
-      <div class="card levels" onclick="goLevels()">
-        <div class="emoji">🎓</div>
-        <h3>Levels</h3>
-        <span>A0 → C1 structured path</span>
-      </div>
-
-      <div class="card talkletics" onclick="goTalkletics()">
-        <div class="emoji">🧩</div>
-        <h3>Talkletics</h3>
-        <span>Skill building games</span>
-      </div>
-
-      <div class="card music" onclick="goMusic()">
-        <div class="emoji">🎵</div>
-        <h3>Music</h3>
-        <span>Learn with rhythm</span>
-      </div>
-
-      <div class="card delf" onclick="goDelf()">
-        <div class="emoji">📄</div>
-        <h3>DELF Prep</h3>
-        <span>Mock exams</span>
-      </div>
-
-      <div class="card translation" onclick="goTranslation()">
-        <div class="emoji">🌍</div>
-        <h3>Translation</h3>
-        <span>Clients & translators</span>
-      </div>
-
-      <div class="card chat" onclick="goChat()">
-        <div class="emoji">💬</div>
-        <h3>Chat Room</h3>
-        <span>Community space</span>
-      </div>
-
-    </main>
-
-
-    <!-- ================= FOOTER ================= -->
-    <div class="dashboard-footer">
-      <button onclick="goFeedback()">Feedback</button>
-      <button onclick="goSupport()">Support 💚 SayBon</button>
-      <button onclick="goHome()">Back to Home</button>
-    </div>
-
+  <div class="card levels" onclick="goLevels()">
+    <div class="emoji">🎓</div>
+    <h3>Levels</h3>
+    <span>A0 → C1 structured path</span>
   </div>
 
+  <div class="card talkletics" onclick="goTalkletics()">
+    <div class="emoji">🧩</div>
+    <h3>Talkletics</h3>
+    <span>Skill building games</span>
+  </div>
 
-  <!-- ================= NAVIGATION SCRIPT ================= -->
-  <script>
-    function goLevels() {
-      window.location.href = "/levels/";
-    }
+  <div class="card music" onclick="goMusic()">
+    <div class="emoji">🎵</div>
+    <h3>Music</h3>
+    <span>Learn with rhythm</span>
+  </div>
 
-    function goTalkletics() {
-      window.location.href = "/talkletics/";
-    }
+  <div class="card delf" onclick="goDelf()">
+    <div class="emoji">📄</div>
+    <h3>DELF Prep</h3>
+    <span>Mock exams</span>
+  </div>
 
-    function goMusic() {
-      window.location.href = "/music/";
-    }
+  <div class="card translation" onclick="goTranslation()">
+    <div class="emoji">🌍</div>
+    <h3>Translation</h3>
+    <span>Clients & translators</span>
+  </div>
 
-    function goDelf() {
-      window.location.href = "/delf/";
-    }
+  <div class="card chat" onclick="goChat()">
+    <div class="emoji">💬</div>
+    <h3>Chat Room</h3>
+    <span>Community space</span>
+  </div>
 
-    function goTranslation() {
-      window.location.href = "/translation/";
-    }
+</main>
 
-    function goChat() {
-      window.location.href = "/chat/";
-    }
+<div class="dashboard-footer">
+  <button onclick="goFeedback()">Feedback</button>
+  <button onclick="goSupport()">Support</button>
+  <button onclick="goHome()">Home</button>
+</div>
 
-    function goFeedback() {
-      window.location.href = "/feedback/";
-    }
+</div>
 
-    function goSupport() {
-      window.location.href = "/support/";
-    }
-
-    function goHome() {
-      window.location.href = "/";
-    }
-  </script>
+<script>
+function goLevels(){ window.location.href="/levels/"; }
+function goTalkletics(){ window.location.href="/talkletics/"; }
+function goMusic(){ window.location.href="/music/"; }
+function goDelf(){ window.location.href="/delf/"; }
+function goTranslation(){ window.location.href="/translation/"; }
+function goChat(){ window.location.href="/chat/"; }
+function goFeedback(){ window.location.href="/feedback/"; }
+function goSupport(){ window.location.href="/support/"; }
+function goHome(){ window.location.href="/"; }
+</script>
 
 </body>
 </html>
