--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LEARNER 📌 DASHBOARD — SayBon</title>
+  <title>LEARNER DASHBOARD — SayBon</title>
 
   <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
 
     <!-- ================= HEADER ================= -->
     <header class="dashboard-header">
-      <h1>LEARNER DASHBOARD</h1>
+      <h1>LEARNER 📌 DASHBOARD</h1>
       <p>Your French journey at a glance</p>
     </header>
 
